# sports

./: .env.example  .gitignore  Anchor.toml  README-INITIALIZE.md  auto_transition_documentation.md  modular_architecture_plan.md  package-lock.json  package.json  reports_and_payments_strategy.md  staking_implementation_summary.md
data/: players.csv
programs/sports/: Cargo.toml
programs/sports/src/: claim_documentation.md  lib.rs  lib.rs.backup
scripts/: apertura_packs.py  bulk_buy_teams.ts  deploy.py  get_discriminator.js  initialize.ts  load_players.ts  report_player_teams.ts  report_sales.ts  sales_report.csv  set_nft_image_url.ts  set_url_nft_idl.json  sports_accounts_idl.json  sports_idl.json  stock_report.csv  update_time_lock.ts
tests/: buy_team_test.ts  simple_initialize_test.ts  sports.ts  stake_team_test.ts
