[package]
name = "sports"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sports"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
serde_json = "1.0"
mpl-token-metadata = "5.1.0"
chainlink_solana = { git = "https://github.com/smartcontractkit/chainlink-solana", branch = "solana-2.1" }


[profile.release]
opt-level = "z"       # optimiza para tamaño
lto = true            # Link-Time Optimization
codegen-units = 1     # menos unidades de compilación mejora LTO
panic = "abort"       # elimina manejo de panic costoso